# m4bar

./: .gitignore  Cargo.toml  README.md
src/: bar.rs  block.rs  colors.rs  config.rs  constants.rs  errors.rs  ewmh.rs  lib.rs  main.rs  protocol.rs  renderer.rs  utils.rs
src/modules/: clock.rs  mod.rs  pager.rs  xwindow.rs
